--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: Terraform Initialize
         run:  terraform init -backend-config="access_key=${{ secrets.AWS_ACCESS_KEY }}" -backend-config="secret_key=${{ secrets.AWS_SECRET_KEY }}" 
         
-        
+       
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -input=false -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var="aws_secret_key=${{ secrets.AWS_SECRET_KEY }}" -var="aws_region=${{ secrets.AWS_REGION }}" -var="aws_profile=${{ secrets.AWS_PROFILE }}" -var="aws_vpc_id=${{ secrets.AWS_VPC_ID }}" -var="aws_subnet_id=${{ secrets.AWS_SUBNET_ID }}" -var="aws_security_group_id=${{ secrets.AWS_SECURITY_GROUP_ID }}" -var="aws_instance_type=${{ secrets.AWS_INSTANCE_TYPE }}" -var="aws_ami_id=${{ secrets.AWS_AMI_ID }}"
      
       
