--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -18,3 +18,9 @@ jobs:
        
       - name: Terraform Plan
         run: terraform plan -out=tfplan -input=false -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var="aws_secret_key=${{ secrets.AWS_SECRET_KEY }}"
+
+      - name: Terraform Apply
+        run: terraform apply -input=false tfplan
+        env:
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
